# promql-assistant-cli

./: .pre-commit-config.yaml  LICENSE  README.md  dockerfile  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  bug_report.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: Rm.md  ci.yml  docker.yml  pages.yaml  pyproject.toml  release-please.yml  release.yml.txt
docs/: index.md
docs/docs/: cookbook.md
src/promql_assistant_cli/: cli.py  config.py  errors.py  nlp_rules.py  prometheus.py  render.py  rules.py  rules.yaml  rules_loader.py  util.py
test/: test_rules.py
tests/: test_rules.py
