[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "promql-assistant-cli"
version = "0.2.0"
description = "Local-first, scriptable PromQL assistant CLI (NL -> PromQL) with optional Prometheus validation."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "daeun-ops" }]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "black>=24.0.0",
]

[project.scripts]
promql-assistant = "promql_assistant_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/promql_assistant_cli"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
